# CrowPanel_MiniMeteo

./: Readme.md
Sources_2.8/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Sources_2.8/main/: CMakeLists.txt  idf_component.yml  main.c
Sources_2.8/main/device/: device_lcd.c  device_touch.c
Sources_2.8/main/device/include/: device_lcd.h  device_touch.h
Sources_2.8/main/entities/: UART.h  aggregator_wrapper.cpp  aggregator_wrapper.h  settings.h
Sources_2.8/main/lv_ui/: lv_ui.c
Sources_2.8/main/lv_ui/include/: lv_ui.h
Sources_2.8/main/setup/: setup_gpio.c  setup_i2c.c  setup_spi.c
Sources_2.8/main/setup/include/: setup_gpio.h  setup_i2c.h  setup_spi.h
Sources_2.8/main/soft_drv/: soft_drv_lvgl_port.c
Sources_2.8/main/soft_drv/include/: soft_drv_lvgl_port.h
Sources_2.8/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Sources_2.8/main/ui/fonts/: ui_font_CO2Font.c  ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c
Sources_2.8/main/ui/images/: ui_img_arrow_bar_png.c  ui_img_arrow_png.c  ui_img_co2_bar_png.c  ui_img_iaq_bar_png.c
Sources_2.8/main/ui/screens/: ui_Screen1.c  ui_Screen2.c
Sources_3.5/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
Sources_3.5/components/arduino-esp32/: idf_component.yml
Sources_3.5/components/arduino-esp32/libraries/NetworkClientSecure/src/: ssl_client.cpp
Sources_3.5/lib/TAMC_GT911/: TAMC_GT911.cpp
Sources_3.5/lib/lvgl/: lv_conf.h
Sources_3.5/lib/ui/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
Sources_3.5/lib/ui/components/: ui_comp_hook.c
Sources_3.5/lib/ui/fonts/: ui_font_CO2Font.c  ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c
Sources_3.5/lib/ui/images/: ui_img_arrow_bar_png.c  ui_img_arrow_png.c  ui_img_co2_bar_png.c  ui_img_iaq_bar_png.c
Sources_3.5/lib/ui/screens/: ui_Screen1.c  ui_Screen2.c
Sources_3.5/main/: CMakeLists.txt  LovyanGFX_Driver.h  main.cpp  touch.h
Sources_3.5/main/entities/: EnvironmentalSensorData.h  UART.h  my_nvs.c  my_nvs.h
